--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z"></path></svg>
   </a>
 </h2><ul>
-<li><strong>October 2024</strong>: I will present at the SIAM Conference on Mathematics of Data Science (MDS24) in Atlanta, Georgia.</li>
+<li><strong>October 2024</strong>: Presented a poster at the SIAM Conference on Mathematics of Data Science (MDS24) in Atlanta, Georgia.</li>
 <li><strong>May 2024</strong>: Presented a poster at the SIAM Conference on Imaging Science (IS24) in Atlanta, Georgia.</li>
 <li><strong>October 2023</strong>: Received the Dean&rsquo;s Fellowship, a one-time award recognizing my academic achievements and commitment to excellence in undergraduate teaching.</li>
 <li><strong>September 2023</strong>: Won the Algorithms for Threat Detection (ATD) Challenge issued by the National Geospatial Intelligence Agency (NGA). Our work contributes to solving critical challenges in predicting the trajectory of geopolitical events.</li>
