--- a/about/index.html
+++ b/about/index.html
@@ -112,7 +112,7 @@ As a data magician, my magic wand comprises trusty programming languages — Pyt
   </div>
   <div class="search-dropdown mobile">
     <div id="search-dropdown-mobile"></div>
-  </div><main class="container"><article class="page single special">
+  </div><main class="container container-reverse"><article class="page single special">
     <div class="header"><h1 class="single-title animate__animated animate__pulse animate__faster">About</h1></div><div class="content" id="content"><p>Hello, I&rsquo;m Chandra. In my journey as a data aficionado, I see data not merely as numbers and graphs, but as a canvas for crafting compelling narratives that unveil valuable insights and address real-world problems. Think of it as a magical show where data takes center stage, and we&rsquo;re the magicians pulling the strings.</p>
 <p>As a data magician, my magic wand comprises trusty programming languages — Python, R, and Matlab — that empower me to summon and manipulate the mystical essence of data. Much like an alchemist delicately crafts their elixir, I handle data with precision and care, knowing that with the right blend of algorithms and techniques, it can be transformed into something truly valuable.</p>
 <p>Yet, the true magic  doesn&rsquo;t just in the tools, but in the storytelling. I excel in narrating compelling tales through intuitive and engaging visualizations. Every chart, every graph, whispers a story of opportunities and strategies.</p>
