--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@
 <meta name="application-name" content="Chandra Kundu | PhD Candidate at UCF">
 <meta name="apple-mobile-web-app-title" content="Chandra Kundu | PhD Candidate at UCF"><meta name="theme-color" data-light="#ffffff" data-dark="#ffffff" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="canonical" type="text/html" href="https://chandrakundu.github.io/about/" title="About - Chandra Kundu | PhD Candidate at UCF" /><link rel="next" type="text/html" href="https://chandrakundu.github.io/posts/linux-fundamentals/linux-fundamentals-2/" title="Linux Fundamentals 2" /><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" href="/lib/fontawesome-free/all.min.css" as="style" onload="this.removeAttribute('onload');this.rel='stylesheet'">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="canonical" type="text/html" href="https://chandrakundu.github.io/about/" title="About - Chandra Kundu | PhD Candidate at UCF" /><link rel="prev" type="text/html" href="https://chandrakundu.github.io/research/" title="Research" /><link rel="next" type="text/html" href="https://chandrakundu.github.io/posts/linux-fundamentals/linux-fundamentals-2/" title="Linux Fundamentals 2" /><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" href="/lib/fontawesome-free/all.min.css" as="style" onload="this.removeAttribute('onload');this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"></noscript><link rel="preload" href="/lib/animate/animate.min.css" as="style" onload="this.removeAttribute('onload');this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="/lib/animate/animate.min.css"></noscript><meta name="google-site-verification" content="0jwgmOu3-q1Tr-PJlcVJTwxYw-d9yLM7nyySKD9W85Y" /><script type="application/ld+json">
   {
@@ -53,8 +53,10 @@
     <div class="header-title">
       <a href="/" title="Chandra Kundu | PhD Candidate at UCF"><span class="header-title-text">Chandra Kundu</span></a><span class="header-subtitle"></span></div>
     <nav>
-      <ul class="menu"><li class="menu-item active">
-              <a class="menu-link" href="/about/">About</a></li><li class="menu-item">
+      <ul class="menu"><li class="menu-item">
+              <a class="menu-link" href="/">Home</a></li><li class="menu-item">
+              <a class="menu-link" href="/research/">Research</a></li><li class="menu-item">
+              <a class="menu-link" href="/teaching/">Teaching</a></li><li class="menu-item">
               <a class="menu-link" href="/cv/">CV</a></li><li class="menu-item">
               <a class="menu-link" href="/posts/">Posts</a></li><li class="menu-item delimiter"></li><li class="menu-item search" id="search-desktop">
             <input type="text" placeholder="Search titles or contents ..." id="search-input-desktop">
@@ -98,7 +100,7 @@
             <a href="javascript:void(0);" class="search-cancel" id="search-cancel-mobile">
               Cancel
             </a>
-          </li><li class="menu-item active"><a class="menu-link" href="/about/">About</a></li><li class="menu-item"><a class="menu-link" href="/cv/">CV</a></li><li class="menu-item"><a class="menu-link" href="/posts/">Posts</a></li><li class="menu-item menu-system">
+          </li><li class="menu-item"><a class="menu-link" href="/">Home</a></li><li class="menu-item"><a class="menu-link" href="/research/">Research</a></li><li class="menu-item"><a class="menu-link" href="/teaching/">Teaching</a></li><li class="menu-item"><a class="menu-link" href="/cv/">CV</a></li><li class="menu-item"><a class="menu-link" href="/posts/">Posts</a></li><li class="menu-item menu-system">
           <span class="menu-system-item theme-switch" title="Switch Theme"><i class="fa-solid fa-adjust fa-fw" aria-hidden="true"></i></span></li>
       </ul>
     </nav>
